更新《青云重开》小说的角色设定，新增核心角色与重要玩家角色的详细信息，简化角色描述，强调角色的特殊能力与成长轨迹，进一步丰富了故事背景与角色关系，强化了科技与修仙的结合主题。

--- a/青云重开/第一卷-初入仙门/章节/第一章-破败山门.md
+++ b/青云重开/第一卷-初入仙门/章节/第一章-破败山门.md
@@ -2,24 +2,85 @@
 
 青云宗，残败的山门孤零零立在云海之上，木牌斑驳，几乎快要断裂。
 
-叶辰坐在冷清的大殿里，手里捧着掌门玉印。上一秒，他还在电脑前打游戏；下一秒，就成了这个宗门的第七代掌门。
+叶辰坐在冷清的大殿里，手里捧着掌门玉印，心中五味杂陈。
+
+就在三个时辰前，他还是地球上一个普通的游戏玩家，正在电脑前玩着一款名为《修仙模拟器》的策略游戏。游戏中的他刚刚建立了一个小宗门，正为如何发展而苦恼。
+
+"这游戏难度也太高了，资源不够，弟子又少，怎么发展啊？"叶辰一边抱怨，一边点击着鼠标。
+
+突然，电脑屏幕闪烁了一下，一个从未见过的弹窗出现：
+
+> 【检测到宿主具备修仙天赋，是否接受传承？】
+> 【是】 【否】
+
+叶辰愣了一下，以为是什么新的游戏内容，随手点击了【是】。
+
+下一秒，眼前一黑，再睁眼时，他已经坐在了这个破败的大殿里，手里还握着这枚温润的玉印。
+
+"这...这是怎么回事？"叶辰环顾四周，古色古香的建筑，空气中弥漫着淡淡的檀香味，远处传来鸟鸣声，一切都显得那么真实。
+
+他低头看着手中的玉印，上面刻着"青云宗掌门印"几个古篆字。脑海中突然涌入大量信息——青云宗的历史、修炼功法、宗门现状...
+
+"我...我穿越了？"叶辰喃喃自语，声音在空旷的大殿中回响。
+
+他站起身来，走到大殿门口，望着远山如黛，云海翻腾。山门外，几座破败的建筑在风中摇摇欲坠。这就是青云宗的全部家当——一座主殿，几间厢房，还有一座几乎坍塌的藏书楼。
+
+"这宗门也太惨了吧..."叶辰苦笑。
+
+从脑海中的信息来看，青云宗曾经也是东域有名的宗门，但经过几代掌门的经营不善，加上外敌入侵，如今已经衰败到了极点。宗门弟子几乎跑光，只剩下他这个刚穿越来的第七代掌门。
+
+更糟糕的是，根据记忆，血煞门一直在觊觎青云宗的地盘，随时可能来犯。以现在宗门的实力，根本无力抵抗。
+
+叶辰看着手中的掌门玉印，心中五味杂陈。他原本只是个普通的游戏玩家，对修仙世界一无所知。但现在，他成了这个宗门的掌门，肩负着振兴宗门的责任。
+
+"既然穿越了，总不能坐以待毙吧。"叶辰深吸一口气，看着破败的宗门，"而且，这似乎也是个机会..."
+
+突然，脑海中传来一阵刺痛，一段新的记忆涌入：
+
+> 【掌门传承记忆】：
+> 青云宗第六代掌门临终前留下遗言：
+> "血煞门主血无痕已突破至化神期，三日内必来灭我青云宗满门。若宗门不保，掌门玉印将自毁，所有传承断绝。唯有重振宗门，才能保住传承，为青云宗报仇雪恨。"
+
+叶辰脸色大变。三日内血煞门就要来灭门？以他现在练气三层的修为，根本就是送死！
+
+"这...这不是开玩笑吧？"叶辰看着手中的掌门玉印，心中涌起一阵绝望。
+
+但随即，他又想到了一线生机。既然有了万界征召系统，或许还有翻盘的机会。如果能在血煞门来犯之前征召到足够强大的玩家，说不定还能保住宗门。
+
+在地球上，他只是一个普通的上班族，生活平淡无奇。但在这里，他是一宗之主，拥有改变命运的机会。更重要的是，他必须活下去，必须保住青云宗的传承。
 
 殿中空荡，只有玉印发出微光。
 耳边响起冷冷的提示：
 
 > 【宗门气运衰竭。是否开启"万界征召"？】
 
-叶辰抬起头，盯着那团光，忍不住笑了声：
-"还能跨界招人？好啊。反正这宗门都快死了，不如赌一把。"
+叶辰抬起头，盯着那团光，心中涌起一阵惊讶。
+
+"系统？这是系统提示？"他仔细打量着那团光芒，"万界征召...这是什么意思？"
+
+> 【万界征召：可征召其他世界的生灵加入宗门，提升宗门实力】
+
+"还能跨界招人？"叶辰眼睛一亮，"这倒是个好办法。反正这宗门都快死了，不如赌一把。"
+
+他深吸一口气，在心中默念："开启万界征召。"
 
 玉印光芒大盛，虚空中浮现出一行行古篆文字：
 
 > 万界征召已启动
 > 目标世界：地球
 > 征召方式：虚拟游戏
-> 预计征召人数：1000人
+> 初始征召人数：10人
+> 征召条件：通过游戏测试，具备修仙天赋
+> 身份伪装：为征召者提供合理的身份背景
+> 后续扩展：随宗门发展逐步增加征召人数
 
-叶辰看着这些信息，心中涌起一阵复杂。他原本只是个普通的游戏玩家，没想到竟然穿越到了修仙世界，还成了掌门。
+叶辰看着这些信息，心中涌起一阵复杂。地球...那是他的故乡。现在他要从那里征召玩家来帮助自己发展宗门。
+
+"身份伪装？"叶辰注意到这个细节，"系统会为征召者提供合理的身份背景，这样原住民就不会怀疑他们的来历了。"
+
+他仔细思考着这个设定。确实，如果突然出现一群来历不明的人，肯定会引起修仙界原住民的怀疑。但有了身份伪装系统，就可以为每个征召者安排合理的背景——比如某个偏远地区的散修、其他宗门的弃徒、或者是隐世高人的弟子等等。
+
+"这样就能避免身份暴露的问题了。"叶辰点点头，"而且初始只征召10人，数量不多，不会引起太大注意。等宗门发展起来，再逐步增加征召人数。"
 
 "有意思。"他站起身来，走到大殿门口，望着远山如黛，云海翻腾。
 
@@ -30,11 +91,36 @@
 > 【宿主当前境界：练气三层】
 > 【宗门等级：九品】
 > 【宗门气运：濒临崩溃】
+> 【可用资源：下品灵石50块，基础功法3部】
+> 【征召扩展条件】：
+> - 宗门等级提升至八品：可征召50人
+> - 宗门等级提升至七品：可征召100人
+> - 宗门等级提升至六品：可征召200人
+> - 宗门等级提升至五品：可征召500人
+> - 宗门等级提升至四品及以上：可征召1000人
 
 练气三层？叶辰苦笑。在这个修仙世界，练气期只是入门，连筑基都算不上。而九品宗门，更是最低等级的存在。
 
-不过，既然有了万界征召这个金手指，或许还有翻盘的机会。
+"这开局也太惨了吧..."叶辰摇头，"不过，既然有了万界征召这个金手指，或许还有翻盘的机会。"
 
-叶辰回到大殿，盘膝而坐，开始修炼。虽然境界低微，但掌门传承的《青云心法》还是让他感受到了天地灵气的流动。
+他看着征召扩展条件，心中有了更清晰的规划。现在只能征召10人，但等宗门发展起来，就能征召更多玩家。这样既能避免一开始就引起修仙界的注意，又能随着宗门实力的提升逐步扩大征召规模。
 
-"希望那些地球玩家能给我带来惊喜吧。"
+"先征召10个玩家，让他们帮助宗门发展。等宗门等级提升，再逐步增加征召人数。"叶辰心中盘算着，"这样既能保证安全，又能稳步发展。"
+
+但随即，他想到了那个迫在眉睫的威胁——血煞门主血无痕三日内就要来灭门！
+
+"不行，时间太紧迫了。"叶辰眉头紧锁，"必须在血煞门来犯之前，让这10个玩家快速成长起来。否则，一切都完了。"
+
+他回到大殿，盘膝而坐，开始修炼。虽然境界低微，但掌门传承的《青云心法》还是让他感受到了天地灵气的流动。
+
+"希望那些地球玩家能给我带来惊喜吧。"叶辰闭上眼睛，开始按照功法运转真元。
+
+随着修炼的进行，他逐渐适应了这个新的身份。虽然心中还有迷茫，但他知道，既然穿越了，就要在这个世界好好活下去。
+
+"青云宗...我会让你重新崛起的。"叶辰在心中暗暗发誓，"先从这10个玩家开始，一步步走向辉煌。"
+
+但内心深处，那个迫在眉睫的威胁始终萦绕不去。血煞门主血无痕，化神期强者，三日内就要来灭门。以他现在的实力，根本无力抵抗。
+
+"必须尽快征召玩家，让他们快速成长。"叶辰睁开眼睛，看着手中的掌门玉印，"这是唯一的希望了。"
+
+远处，夕阳西下，云海翻腾，仿佛在诉说着这个古老宗门的兴衰历史。而叶辰，这个来自地球的穿越者，即将为这个宗门带来新的希望。但时间，已经不多了。
