--- a/青云重开/项目文档/大纲/小说大纲.md
+++ b/青云重开/项目文档/大纲/小说大纲.md
@@ -51,67 +51,40 @@
 
 ## 主要角色设定
 
-### 核心角色
+> **详细设定请参考：[角色设定目录](../角色设定/)**
+
+### 核心角色概览
 
 **叶辰（主角）**
 - 身份：青云宗第七代掌门，地球穿越者
-- 初始修为：练气三层
 - 特殊能力：万界征召系统宿主
 - 成长轨迹：从游戏玩家→宗门掌门→修仙界领袖
-- 性格特点：理性、有责任感、善于学习
 - 专长：宗门管理、战略规划、科技修仙融合
 
 **林轩（副主角）**
 - 身份：地球大学生，首个征召玩家
-- 初始修为：无（普通人）
 - 特殊天赋：天生灵体，修炼速度极快
 - 成长轨迹：普通学生→修仙天才→副掌门→仙路争锋
-- 性格特点：善良、勇敢、重情义
 - 专长：剑修、战斗指挥、弟子培养
 
-### 重要玩家角色
+### 重要玩家角色概览
 
-**苏雨柔（炼丹师）**
-- 身份：地球中医药大学研究生
-- 专长：现代医学+传统炼丹术
-- 成长轨迹：医学生→炼丹天才→宗门首席炼丹师
-- 特殊贡献：改良炼丹配方，提高成丹率
+**苏雨柔（炼丹师）**：现代医学+传统炼丹术，改良炼丹配方
+**陈浩（炼器师）**：现代材料学+传统炼器术，创造合金法宝
+**王小明（阵法师）**：现代编程思维+传统阵法，建立自动化系统
+**张雅（外交官）**：现代外交理论+修仙界礼仪，建立外交网络
+**李强（商业天才）**：现代商业理论+修仙界贸易，建立商业帝国
 
-**陈浩（炼器师）**
-- 身份：地球机械工程师
-- 专长：现代材料学+传统炼器术
-- 成长轨迹：工程师→炼器大师→法宝研发专家
-- 特殊贡献：创造合金法宝，提升法宝性能
+### 修仙界原住民角色概览
 
-**王小明（阵法师）**
-- 身份：地球程序员
-- 专长：现代编程思维+传统阵法
-- 成长轨迹：程序员→阵法天才→宗门网络系统开发者
-- 特殊贡献：建立宗门自动化系统
+**青云宗长老团**：大长老（保守派）、二长老（中立派）、三长老（改革派）
+**其他宗门角色**：血煞门主血无痕（主要反派）、天剑宗宗主（盟友/竞争对手）、万宝阁阁主（商业合作伙伴）
 
-**张雅（外交官）**
-- 身份：地球国际关系专业学生
-- 专长：现代外交理论+修仙界礼仪
-- 成长轨迹：学生→外交专家→宗门外交部长
-- 特殊贡献：建立宗门外交网络
-
-**李强（商业天才）**
-- 身份：地球商学院学生
-- 专长：现代商业理论+修仙界贸易
-- 成长轨迹：学生→商业奇才→宗门财政部长
-- 特殊贡献：建立宗门商业帝国
-
-### 修仙界原住民角色
-
-**青云宗长老团**
-- 大长老：传统修仙者，保守派代表
-- 二长老：阵法专家，中立派
-- 三长老：炼丹师，改革派支持者
-
-**其他宗门角色**
-- 血煞门主血无痕：主要反派
-- 天剑宗宗主：盟友/竞争对手
-- 万宝阁阁主：商业合作伙伴
+> **完整角色设定文件**：
+> - [核心角色](../角色设定/核心角色.md)
+> - [玩家角色](../角色设定/玩家角色.md)
+> - [修仙界原住民](../角色设定/修仙界原住民.md)
+> - [角色设定总览](../角色设定/README.md)
 
 ---
 
